<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">

    <string name="app_name">Comic Reader</string>
    <string name="permission_request_from_app_settings">The app requires permission to save temporary cached data. Please go to application settings and allow all permissions.</string>
    <string name="ok">OK</string>
    <string name="permission_request_rationale">The app requires permission to save temporary cached data locally. Please allow the app permission.</string>
    <string name="search">Search</string>
    <string name="please_wait">Please Wait…</string>
    <string name="cover_image">Cover Image</string>
    <string name="comic_name">Comic Name</string>
    <string name="mmm_dd_yyyy">MMM dd, yyyy</string>
    <string name="cat1_cat2_">Category 1, Category 2…</string>
    <string name="the_comic_description_goes_here">The Comic Description Goes Here…</string>
    <string name="sort_by">Sort By</string>

    <string name="popularity">Popularity</string>
    <string name="latest_first">Latest First</string>
    <string name="a_to_z">A-to-Z</string>
    <string name="categories">Categories</string>
    <string name="apply">Apply</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="page_progress">Page Progress</string>
    <string name="favorite">Favorite</string>
    <string name="buffer">Buffer</string>
    <string name="buffering">Buffering…</string>
    <string name="progress">Progress</string>
    <string name="cancel">Cancel</string>
    <string name="view_chapters_list">View Chapters List</string>
    <string name="chapter_title">Chapter Title</string>
    <string name="start_reading">Start Reading</string>
    <string name="read_this_chapter_again">Read This Chapter Again</string>
    <string name="not_started_yet">Not Started Yet</string>
    <string name="finished_reading">Finished Reading</string>
    <string name="failed_to_buffer_chapter_">Failed to Buffer Chapter ! Please Try Again.</string>
    <string name="buffered_x_out_of_y_pages_z">Buffered %d out of %d Pages (%d%%)</string>
    <string name="buffering_page_no_x_y">Buffering Page No. %d (%d%%) - %.2f mb</string>
    <string name="buffering_chapter_s">Buffering Chapter&lt;br&gt;&lt;br&gt;&lt;b&gt;&quot;%s&quot;&lt;/b&gt;&lt;/br&gt;&lt;/br&gt;</string>
    <string name="failed_to_load_comics_reason_s">Failed to Load Comics. Reason: %s</string>
    <string name="failed_to_load_comic_details_reason_s">Failed to Load Comic Details. Reason: %s</string>
    <string name="failed_to_load_chapter_reason_s">Failed to Load Chapter. Reason: %s</string>
    <string name="page_d_d">Page %d/%d</string>
    <string name="chapter_complete_next_chapter_s">&lt;small&gt;Chapter Complete&lt;/small&gt;&lt;br&gt;&lt;br&gt;-: Next Chapter :-&lt;br&gt;&lt;br&gt;&lt;big&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/big&gt;</string>
    <string name="failed_to_load_next_chapter">Failed to Load Next Chapter !</string>
    <string name="_d_selected">%d Selected</string>
    <string name="found_d_comics">Found %d Comics</string>
    <string name="select_at_least_1_category">Select at least 1 category</string>
    <string name="reading_page_no_d_out_of_d_pages">Reading Page No. %d out of %d Pages</string>
    <string name="released_in_s">Released in %s</string>
    <string name="_d_hits">%d Hits</string>
    <string name="_d_chapters">%d Chapters</string>
    <string name="app_closed">App Closed</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="unknown">Unknown</string>
    <string name="___">…</string>
    <string name="favorites">Favorites</string>
    <string name="no_chapters_available_right_now">No Chapters Available Right Now !</string>
    <string name="removed_from_favorites">Removed From Favorites</string>
    <string name="marked_as_favorite">Marked As Favorite</string>
    <string name="tutorial">Tutorial</string>
    <string name="you_can_filter_the_comics_using_these_options">You Can Filter the Comics Using These Options</string>
    <string name="got_it">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="details_tutorial_1">Mark this comic as favorite, so that you can come back here quickly.</string>
    <string name="details_tutorial_2">View the Chapters List and Start Reading.</string>
    <string name="chapter_buffer_tutorial">Click on the \'Download\' Icon to Buffer the Chapter Offline and Read Without Internet Connection ! Isn\'t it Awesome?</string>
    <string name="reader_tutorial_1">Double Tap to Zoom In</string>
    <string name="reader_tutorial_2">Single Tap to Zoom Out</string>
    <string name="reader_tutorial_3">Swipe Left or Right to Flip Pages</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="star">Star</string>
    <string name="rating_dialog_msg">Looks like you are enjoying the comics. Want to rate this app 5 stars?</string>
    <string name="content_not_available">Content Not Available</string>

    <string-array name="sorting_options">
        <item>@string/popularity</item>
        <item>@string/latest_first</item>
        <item>@string/a_to_z</item>
    </string-array>

</resources>
