<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/no_cover"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/cover_image"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCover"
            android:textSize="@dimen/textSize14"
            android:textStyle="bold"
            android:textColor="@color/textColorDark"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/comic_name"/>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:textSize="@dimen/textSize12"
            android:textColor="@color/textColor"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cat1_cat2_"/>

        <TextView
            android:id="@+id/tvLastUpdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCategories"
            android:layout_toStartOf="@+id/ivStar"
            android:textSize="@dimen/textSize12"
            android:textColor="@color/textColor"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/mmm_dd_yyyy"/>

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/tvLastUpdated"
            android:layout_alignBottom="@+id/tvLastUpdated"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:src="@drawable/star_on"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/favorite"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>