<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvNextChapterInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize18"
            android:textColor="@color/textColorInverse"
            android:layout_margin="10dp"
            android:text="@string/chapter_complete_next_chapter_s"/>

        <Button
            android:id="@+id/btnStartReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/textColorInverse"
            android:textSize="@dimen/textSize16"
            android:background="@drawable/btn_selector"
            android:text="@string/start_reading"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnFirstPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:textColor="@color/textColorInverse"
        android:textSize="@dimen/textSize14"
        android:background="#000000"
        android:text="@string/read_this_chapter_again"/>

</RelativeLayout>