<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bordered_rectangle_primary_color"
    android:padding="3dp"
    style="?android:attr/buttonBarStyle">

    <LinearLayout
        android:id="@+id/llAllNone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/btnAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:textColor="@color/textColorInverse"
            android:textSize="@dimen/textSize16"
            android:background="@drawable/btn_selector_orange"
            android:text="@string/all"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:textColor="@color/textColorInverse"
            android:textSize="@dimen/textSize16"
            android:background="@drawable/btn_selector_orange"
            android:text="@string/none"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llAllNone"
        android:layout_above="@+id/btn"
        android:background="#ffffff"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="3dp"
        android:textColor="@color/textColorInverse"
        android:textSize="@dimen/textSize16"
        android:background="@drawable/btn_selector_orange"
        android:text="@string/apply"
        style="?android:attr/buttonBarButtonStyle"/>

</RelativeLayout>